syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message equipLock_toS {
    required uint32  equipID  = 1;
    required bool    isLock   = 2;
}

message equipLock_toC {}